# webscraping-etl-airflow--cricket-league

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
dags/: etl_dag.py
dags/cricket_data_etl/: extract.py  load.py  transform.py
docker/: Dockerfile
sql/: make_scores_table.sql  summarise.sql
